--- a/.github/workflows/build_docker_doc.yml
+++ b/.github/workflows/build_docker_doc.yml
@@ -1,7 +1,9 @@
 name: Build doc docker image
 
 on:
-  push
+  push:
+    path:
+      - 'doc/Dockerfile'
 
 jobs:
   build_docker_image:
@@ -9,11 +11,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set Tag
+        run: echo "tag:latest" >> $GITHUB_ENV
       - run: |
           echo ${{ secrets.DELIVER_REPO_ACCESS_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build Docker image
-        run: docker build . --file doc/Dockerfile --tag ghcr.io/didiermichel/pandoc:0.1
+        run: docker build . --file doc/Dockerfile --tag ghcr.io/didiermichel/pandoc:${{ env.tag }}
       - name: Push to registry
-        run: docker push ghcr.io/didiermichel/pandoc:0.1
+        run: docker push ghcr.io/didiermichel/pandoc:${{ env.tag }}
 
 
