--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,8 +34,11 @@ jobs:
     needs: set_version
     runs-on: ubuntu-latest
     steps:
-      - run: |
-         echo "ok"
+      - run: echo "${{ toJSON(github) }}"
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: dev/add_release
       - run: |
           git log
 
