--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,33 +8,33 @@ on:
         required: true
 
 jobs:
-#  set_version:
-#    runs-on: ubuntu-latest
-#    container:
-#      image: ghcr.io/didiermichel/pandoc:0.1
-#      credentials:
-#        username: ${{ github.actor }}
-#        password: ${{ secrets.DELIVER_REPO_ACCESS_TOKEN }}
-#    steps:
-#      - name: Run only on master
-#        if: ${{ github.ref_name }} != 'dev/add_release'
-##        if: ${{ github.ref_name }} != 'master'
-#        run: echo 1
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#      - name: Update version in barman.
-#        run: |
-#          ${GITHUB_WORKSPACE}/scripts/ci-set-version.sh ${{ github.event.inputs.release }}
-#      - name: Commit changes
-#        uses: EndBug/add-and-commit@v9
-#        with:
-#          add: '["barman/version.py", "doc/*"]'
-#          default_author: github_actions
-#          message:  "Version set to ${{ github.event.inputs.release }}"
-#          push: true
+  set_version:
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/didiermichel/pandoc:0.1
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.DELIVER_REPO_ACCESS_TOKEN }}
+    steps:
+      - name: Run only on master
+        if: ${{ github.ref_name }} != 'dev/add_release'
+#        if: ${{ github.ref_name }} != 'master'
+        run: echo 1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Update version in barman.
+        run: |
+          ${GITHUB_WORKSPACE}/scripts/ci-set-version.sh ${{ github.event.inputs.release }}
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: '["barman/version.py", "doc/*"]'
+          default_author: github_actions
+          message:  "Version set to ${{ github.event.inputs.release }}"
+          push: true
 
   news_tag_release:
-    #needs: set_version
+    needs: set_version
     runs-on: ubuntu-latest
     steps:
       - run: echo "${{ toJSON(github) }}"
@@ -70,24 +70,22 @@ jobs:
           tag: "release/${{ github.event.inputs.release }}"
           name: "Barman ${{ github.event.inputs.release }}"
           token: ${{ secrets.GITHUB_TOKEN }}
-          draft: true
+          prerelease: true
 
-
-
-#  dispatch:
-## triggers other pipelines in related repositories
-#    needs: release
-#    strategy:
-#      matrix:
-#        repo: ['didiermichel/barman-packaging']
-#    name: Trigger barman packaging update
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Repository dispatch
-#        uses: peter-evans/repository-dispatch@v2
-#        with:
-#          # Personal access token to trigger the other pipelines
-#          token: ${{ secrets.DELIVER_REPO_ACCESS_TOKEN }}
-#          repository: ${{ matrix.repo }}
-#          event-type: dispatch_release
-#          client-payload: '{"release_name": "release/${{ github.event.inputs.release }}"}'
+  dispatch:
+# triggers other pipelines in related repositories
+    needs: news_tag_release
+    strategy:
+      matrix:
+        repo: ['didiermichel/barman-packaging']
+    name: Trigger barman packaging update
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository dispatch
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          # Personal access token to trigger the other pipelines
+          token: ${{ secrets.DELIVER_REPO_ACCESS_TOKEN }}
+          repository: ${{ matrix.repo }}
+          event-type: dispatch_release
+          client-payload: '{"release_name": "release/${{ github.event.inputs.release }}"}'
