--- a/doc/Dockerfile
+++ b/doc/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:buster
 
-RUN apt-get update && apt-get install -y make git pandoc texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
+RUN apt-get update && apt-get install -y make git pandoc=2.2.1* -V texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
 
 WORKDIR /data
