--- a/.github/workflows/build_docker_doc.yml
+++ b/.github/workflows/build_docker_doc.yml
@@ -8,12 +8,13 @@ on:
 jobs:
   build_docker_image:
     runs-on: ubuntu-latest
+    env:
+      docker_tag: "2.2.1"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set Tag
-        run: echo "docker_tag=2.2.1" >> $GITHUB_ENV
-      - run: |
+      - name: Loging to ghcr.io registry
+        run: |
           echo ${{ secrets.DELIVER_REPO_ACCESS_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build Docker image
         run: docker build . --file doc/Dockerfile --tag ghcr.io/didiermichel/pandoc:${{ env.docker_tag }}
